// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ConfigurationBar should match snapshot, expired 1`] = `
<Connect(AnnouncementBar)
  handleClose={[Function]}
  message={
    <div
      className="announcement-bar__configuration"
    >
      <React.Fragment>
        <img
          className="advisor-icon"
          src=""
        />
        <Memo(MemoizedFormattedMessage)
          defaultMessage="{licenseSku} license is expired and some features may be disabled."
          id="announcement_bar.error.license_expired"
          values={
            Object {
              "licenseSku": "Enterprise",
            }
          }
        />
      </React.Fragment>
      <Memo(Connect(RenewalLink))
        telemetryInfo={
          Object {
            "error": "renew_license_banner_fail",
            "success": "renew_license_banner_success",
          }
        }
      />
    </div>
  }
  showCloseButton={true}
  tooltipMsg={
    <React.Fragment>
      <img
        className="advisor-icon"
        src=""
      />
      <Memo(MemoizedFormattedMessage)
        defaultMessage="{licenseSku} license is expired and some features may be disabled."
        id="announcement_bar.error.license_expired"
        values={
          Object {
            "licenseSku": "Enterprise",
          }
        }
      />
    </React.Fragment>
  }
  type="critical"
/>
`;

exports[`components/ConfigurationBar should match snapshot, expired, cloud license, show nothing 1`] = `""`;

exports[`components/ConfigurationBar should match snapshot, expired, in grace period 1`] = `
<Connect(AnnouncementBar)
  handleClose={[Function]}
  message={
    <div
      className="announcement-bar__configuration"
    >
      <React.Fragment>
        <img
          className="advisor-icon"
          src=""
        />
        <Memo(MemoizedFormattedMessage)
          defaultMessage="{licenseSku} license is expired and some features may be disabled."
          id="announcement_bar.error.license_expired"
          values={
            Object {
              "licenseSku": "Enterprise",
            }
          }
        />
      </React.Fragment>
      <Memo(Connect(RenewalLink))
        telemetryInfo={
          Object {
            "error": "renew_license_banner_fail",
            "success": "renew_license_banner_success",
          }
        }
      />
    </div>
  }
  showCloseButton={true}
  tooltipMsg={
    <React.Fragment>
      <img
        className="advisor-icon"
        src=""
      />
      <Memo(MemoizedFormattedMessage)
        defaultMessage="{licenseSku} license is expired and some features may be disabled."
        id="announcement_bar.error.license_expired"
        values={
          Object {
            "licenseSku": "Enterprise",
          }
        }
      />
    </React.Fragment>
  }
  type="critical"
/>
`;

exports[`components/ConfigurationBar should match snapshot, expired, regular user 1`] = `
<Connect(AnnouncementBar)
  message={
    <React.Fragment>
      <img
        className="advisor-icon"
        src=""
      />
      <Memo(MemoizedFormattedMessage)
        defaultMessage="{licenseSku} license is expired and some features may be disabled. Please contact your System Administrator for details."
        id="announcement_bar.error.past_grace"
        values={
          Object {
            "licenseSku": "Enterprise",
          }
        }
      />
    </React.Fragment>
  }
  type="critical"
/>
`;

exports[`components/ConfigurationBar should match snapshot, expiring, cloud license, show nothing 1`] = `""`;

exports[`components/ConfigurationBar should match snapshot, expiring, trial license 1`] = `
<Connect(AnnouncementBar)
  handleClose={[Function]}
  message={
    <div
      className="announcement-bar__configuration"
    >
      <React.Fragment>
        <img
          className="advisor-icon"
          src=""
        />
        This is the last day of your free trial. Purchase a license now to continue using Mattermost Professional and Enterprise features.
      </React.Fragment>
      <PurchaseLink
        buttonTextElement={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Purchase a License Now"
            id="announcement_bar.error.purchase_a_license_now"
          />
        }
      />
    </div>
  }
  showCloseButton={true}
  tooltipMsg={
    <React.Fragment>
      <img
        className="advisor-icon"
        src=""
      />
      This is the last day of your free trial. Purchase a license now to continue using Mattermost Professional and Enterprise features.
    </React.Fragment>
  }
  type="critical"
/>
`;

exports[`components/ConfigurationBar should match snapshot, expiring, trial license, mobile viewport 1`] = `
<Connect(AnnouncementBar)
  handleClose={[Function]}
  message={
    <div
      className="announcement-bar__configuration"
    >
      <React.Fragment>
        <img
          className="advisor-icon"
          src=""
        />
        This is the last day of your free trial.
      </React.Fragment>
      <PurchaseLink
        buttonTextElement={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Purchase a License Now"
            id="announcement_bar.error.purchase_a_license_now"
          />
        }
      />
    </div>
  }
  showCloseButton={true}
  tooltipMsg={
    <React.Fragment>
      <img
        className="advisor-icon"
        src=""
      />
      This is the last day of your free trial.
    </React.Fragment>
  }
  type="critical"
/>
`;

exports[`components/ConfigurationBar should match snapshot, show nothing 1`] = `""`;
